duer4peppa-95
Building deployment pipeline.

Change-Id: I8c2a76856c53779160d43fff99bd2e9c8549483c